fix (tour page): button sizing and alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -474,10 +474,12 @@ https://getbootstrap.com/docs/5.2/layout/breakpoints/ */
 .tour .trip-plan-item {
   padding-bottom: 4.375rem;
 }
-.tour .outro {
-  padding: 80px 0 200px 0;
+
+.outro {
+  padding: 80px 0 0 0;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .wrapper-special-offers {
